[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Door/Door/Open.PNG" type="Texture" id=1]
[ext_resource path="res://Assets/Door/Door/Closed.PNG" type="Texture" id=2]
[ext_resource path="res://Door.gd" type="Script" id=3]
[ext_resource path="res://Items/Hover.tscn" type="PackedScene" id=4]
[ext_resource path="res://RoomDetector.tscn" type="PackedScene" id=5]
[ext_resource path="res://WaterIndicator.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 8 )

[node name="Door" type="StaticBody2D"]
collision_layer = 384
script = ExtResource( 3 )

[node name="WaterIndicator" parent="." instance=ExtResource( 6 )]

[node name="WaterIndicator2" parent="." instance=ExtResource( 6 )]
position = Vector2( 16, 0 )

[node name="Open" type="Sprite" parent="."]
position = Vector2( 16, 8 )
texture = ExtResource( 1 )

[node name="Closed" type="Sprite" parent="."]
visible = false
position = Vector2( 16, 8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 16, 8 )
shape = SubResource( 1 )

[node name="Hover" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 16, 8 )
scale = Vector2( 1.74565, 1.12837 )

[node name="Blocker" type="StaticBody2D" parent="."]
collision_layer = 2147483649

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocker"]
visible = false
position = Vector2( 16, 8 )
shape = SubResource( 2 )

[node name="BottomRoom" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 16, 24 )

[node name="TopRoom" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 16, -8 )
[connection signal="room_changed" from="BottomRoom" to="." method="_on_room_changed"]
[connection signal="room_density_changed" from="BottomRoom" to="." method="_on_room_density_changed"]
[connection signal="room_changed" from="TopRoom" to="." method="_on_room_changed"]
[connection signal="room_density_changed" from="TopRoom" to="." method="_on_room_density_changed"]
